Apps: Fix align of remove button

--- a/src/pages/Apps/Apps.scss
+++ b/src/pages/Apps/Apps.scss
@@ -7,41 +7,48 @@
     justify-items: center;
 
     .app-shortcut {
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-      @mixin remove-app-btn-hidden {
-        visibility: hidden;
-        opacity: 0;
-        transform: translate(48%, -50%) scale(.45, .45);
-        transition: opacity 300ms, transform 300ms, visibility 0s 300ms;
-      }
+      .app-icon-wrapper {
+        position: relative;
 
-      .remove-app-btn {
-        position: absolute;
-        top: 0;
-        right: 0;
-        cursor: pointer;
-        @include remove-app-btn-hidden;
-      }
+        @mixin remove-app-btn-hidden {
+          visibility: hidden;
+          opacity: 0;
+          transform: translate(48%, -50%) scale(.45, .45);
+          transition: opacity 300ms, transform 300ms, visibility 0s 300ms;
+        }
 
-      &:hover .remove-app-btn, .remove-app-btn.visible {
-        visibility: visible;
-        opacity: 1;
-        transform: translate(48%, -50%) scale(.58, .58);
-        transition: opacity 300ms 500ms, transform 300ms 500ms, visibility 0s 500ms;
-      }
-
-      @media (hover: none) {
-        .remove-app-btn:not(.visible) {
+        .remove-app-btn {
+          position: absolute;
+          top: 0;
+          right: 0;
+          cursor: pointer;
           @include remove-app-btn-hidden;
+        }
+
+        &:hover .remove-app-btn, .remove-app-btn.visible {
+          visibility: visible;
+          opacity: 1;
+          transform: translate(48%, -50%) scale(.58, .58);
+          transition: opacity 300ms 500ms, transform 300ms 500ms, visibility 0s 500ms;
+        }
+
+        @media (hover: none) {
+          .remove-app-btn:not(.visible) {
+            @include remove-app-btn-hidden;
+          }
+        }
+
+        .ae-app-icon {
+          margin: 0 auto;
         }
       }
 
-      .ae-app-icon {
-        margin: 0 auto;
-      }
-
       .app-name {
+        display: block;
         margin-top: 10px;
         text-align: center;
       }
